fixed images stretching on ios

--- a/style.css
+++ b/style.css
@@ -662,17 +662,11 @@ a:hover {
     border-radius: 5px;
 }
 
-.image-group {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-}
-
 .image-group img {
     width: 50%;
-    max-height: auto;
+    display: inline-block;
+    margin: 0;
+    float: left;
 }
 
 .call-now img {
